--- a/abc/abc1/demo.html
+++ b/abc/abc1/demo.html
@@ -1,5 +1,6 @@
 this is html page by janvi
 this is html page by janvi
 this is other code
-this is other code Ami
 this is code
+this is other code
+
